[gd_scene load_steps=9 format=3 uid="uid://dk81x5voqy2pg"]

[ext_resource type="StyleBox" uid="uid://j1dsq6iyrr2h" path="res://theme/panel/scan.stylebox" id="1_effik"]
[ext_resource type="Script" path="res://ImageStatusMini.gd" id="2_1yp6c"]
[ext_resource type="PackedScene" uid="uid://y718brcu5cla" path="res://pills/metadata_pill_sm.tscn" id="3_0n2kl"]
[ext_resource type="PackedScene" uid="uid://ce2m856c8mrw7" path="res://pills/index_report_pill_sm.tscn" id="4_fcm15"]
[ext_resource type="PackedScene" uid="uid://brrp6iv8mh8q3" path="res://pills/vuln_report_pill_sm.tscn" id="5_liki4"]
[ext_resource type="PackedScene" uid="uid://c7ke2b55sdt8i" path="res://pills/signatures_pill_sm.tscn" id="6_1itnd"]
[ext_resource type="PackedScene" uid="uid://eisvelgj1tgw" path="res://pills/signature_verification_pill_sm.tscn" id="7_if65g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsgvh"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="ImageStatus" type="Panel"]
offset_left = -13.0
offset_top = -21.0
offset_right = 13.0
offset_bottom = 23.0
theme_override_styles/panel = ExtResource("1_effik")
script = ExtResource("2_1yp6c")
have_metadata = true
have_index_report = true
have_vuln_report = true
have_signatures = true

[node name="MetadataPill" parent="." instance=ExtResource("3_0n2kl")]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 51.0
offset_bottom = 27.0
active = true

[node name="IndexReportPill" parent="." instance=ExtResource("4_fcm15")]
layout_mode = 0
offset_left = 5.0
offset_top = 13.0
offset_right = 28.0
offset_bottom = 36.0
active = true

[node name="VulnReportPill" parent="." instance=ExtResource("5_liki4")]
layout_mode = 0
offset_left = 13.0
offset_top = 13.0
offset_right = 36.0
offset_bottom = 36.0
active = true

[node name="SignaturesPill" parent="." instance=ExtResource("6_1itnd")]
layout_mode = 0
offset_left = 5.0
offset_top = 22.0
offset_right = 51.0
offset_bottom = 45.0
active = true

[node name="SignaturesVerificationPill" parent="." instance=ExtResource("7_if65g")]
layout_mode = 0
offset_left = 5.0
offset_top = 31.0
offset_right = 51.0
offset_bottom = 54.0
active = true

[node name="Error" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 27.0
offset_right = 24.0
offset_bottom = 36.0
rotation = -0.736529
theme_override_styles/panel = SubResource("StyleBoxFlat_fsgvh")
